--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,6 +15,12 @@
 .estiloImagen {
   width: fit-content;
 }
+/* Contenedor de approuter */
+.contenedorAppRouter{
+padding: 3rem;
+}
+
+
 /*Hero */
 .hero {
   background-image: url(https://picsum.photos/1080);/* para selecionar la imagen en la carpeta contenedora del proyecto*/
@@ -78,4 +84,10 @@
 /* Cards */
 .estiloextcard{
   margin-bottom: 3rem;
+}
+/* Imagen */
+
+.contenedorImg{
+  border-radius: .5rem;
+  
 }
