--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,12 +1,26 @@
-:root{/*paleta de colores declaradas como variables */
-    --blanco: #ffffff;
-    --obscuro: #212121;
-    --primario: #ffc107;
-    --Secundario: #0097a7;
-    --gris:#757575;
-    --grisClaro: #dfe9f3;
+:root {
+  /*paleta de colores declaradas como variables */
+  --blanco: #ffffff;
+  --obscuro: #212121;
+  --primario: #ffc107;
+  --Secundario: #0097a7;
+  --gris: #757575;
+  --grisClaro: #dfe9f3;
+}
+.cont-posfotter-abajo {
 
-    }
+  display: grid;
+  min-height: 100vh;
+  grid-template-columns: auto 1fr auto;
+}
+.prop-paracentrar {
+  display: flex;
+  align-items: center;
+}
+.centrarcontenido {
+  display: flex;
+  align-items: center;
+}
 .margen-navBar {
   margin-bottom: 30px;
   margin-top: 100px;
@@ -16,16 +30,15 @@
   width: fit-content;
 }
 /* Contenedor de approuter */
-.contenedorAppRouter{
-padding: 3rem;
+.contenedorAppRouter {
+  padding: 3rem;
 }
-
 
 /*Hero */
 .hero {
-  background-image: url(https://picsum.photos/1080);/* para selecionar la imagen en la carpeta contenedora del proyecto*/
+  background-image: url(https://picsum.photos/1080); /* para selecionar la imagen en la carpeta contenedora del proyecto*/
   background-repeat: no-repeat; /*esto evita que se repita la imagen por el tamaño que se le da*/
-  background-size: cover; /*hace un poco mas grande la imagen */;
+  background-size: cover; /*hace un poco mas grande la imagen */
   border-radius: 25px;
   height: 450px;
   position: relative;
@@ -50,31 +63,28 @@ padding: 3rem;
   color: var(--blanco);
 }
 
-
-.boton{
-            background-color: var(--Secundario);
-            color: var(--blanco);/*cambia el color de texto*/
-            padding: 1rem 3rem;
-            margin-top: 3rem;
-            font-size: 2rem;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: .5rem;
-            width: 90%;
-            text-align: center;
-            border: none;
-
-        
-        }
+.boton {
+  background-color: var(--Secundario);
+  color: var(--blanco); /*cambia el color de texto*/
+  padding: 1rem 3rem;
+  margin-top: 3rem;
+  font-size: 2rem;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 0.5rem;
+  width: 90%;
+  text-align: center;
+  border: none;
+}
 @media (min-width: 768px) {
-        .boton{
-                width: auto;
-              }  
-    }
+  .boton {
+    width: auto;
+  }
+}
 
-.boton:hover{
-    cursor: pointer;
-}  
+.boton:hover {
+  cursor: pointer;
+}
 
 .footerposition {
   bottom: 0;
@@ -82,12 +92,11 @@ padding: 3rem;
   width: 100%;
 }
 /* Cards */
-.estiloextcard{
+.estiloextcard {
   margin-bottom: 3rem;
 }
 /* Imagen */
 
-.contenedorImg{
-  border-radius: .5rem;
-  
+.contenedorImg {
+  border-radius: 0.5rem;
 }
